- class and package refactorization in order to make a place for others cloud providers not only GCE - defining google_cloud_sdk path (singleton PropertiesUtil) - cleaning docs